<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#FFF">
    <RelativeLayout 
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
		<ImageView 
		    android:id="@+id/logo_in_first_slider"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:src="@drawable/logo"
		    android:contentDescription="@string/content_description_for_image"
		    android:layout_centerHorizontal="true"/>
		<TextView 
		    android:id="@+id/logo_name"
		    android:text="@string/app_name"
		    android:textSize="30sp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:layout_below="@+id/logo_in_first_slider"
		    android:layout_centerHorizontal="true"/>
	</RelativeLayout>
	<TextView 
	    android:id="@+id/call_to_action"
	    android:text="@string/call_to_action"
	    android:textSize="13sp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:gravity="center"/>
</RelativeLayout>