<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF" >
    
	<RelativeLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true">
	    <ImageView
	        android:id="@+id/logo_in_last_slider"
	        android:src="@drawable/logo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/content_description_for_image"/>
	    <TextView 
		    android:id="@+id/logo_name_in_last_slider"
		    android:text="@string/app_name"
		    android:textSize="25sp"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:layout_below="@+id/logo_in_last_slider"
		    android:layout_centerHorizontal="true"/>
	    <TextView 
	        android:id="@+id/remaining_time"
	        android:text="@string/remaining_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:layout_below="@+id/logo_name_in_last_slider"
	        android:layout_centerHorizontal="true"
	        android:gravity="center_horizontal"/>
	    <LinearLayout 
	        android:id="@+id/count_down_field"
	        android:baselineAligned="false"
	        android:orientation="horizontal"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/remaining_time">
	        <RelativeLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal">
	            <TextView 
			        android:id="@+id/days"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:layout_marginRight="5dp"
			        android:layout_marginLeft="5dp"
			        android:gravity="center_horizontal"
			        android:layout_centerHorizontal="true"
			        android:textSize="23sp"/>
	            <TextView 
	                android:id="@+id/days_title"
	                android:layout_below="@+id/days"
	                android:text="@string/days"
	                android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="3dp"
			        android:paddingRight="10dp"
			        android:paddingLeft="10dp"/>
	        </RelativeLayout>
	        <RelativeLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal">
	            <TextView
			        android:id="@+id/hours" 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:layout_marginRight="5dp"
			        android:layout_marginLeft="5dp"
			        android:gravity="center_horizontal"
			        android:layout_centerHorizontal="true"
			        android:textSize="23sp"/>
	            <TextView 
	                android:id="@+id/hours_title"
	                android:layout_below="@+id/hours"
	                android:text="@string/hours"
	                android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="3dp"
			        android:paddingRight="10dp"
			        android:paddingLeft="10dp"/>
	        </RelativeLayout>
	        <RelativeLayout 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal">
	        	<TextView
			        android:id="@+id/minutes" 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:layout_marginRight="5dp"
			        android:layout_marginLeft="5dp"
			        android:gravity="center_horizontal"
			        android:layout_centerHorizontal="true"
			        android:textSize="23sp"/>
	        	<TextView 
	                android:id="@+id/minutes_title"
	                android:layout_below="@+id/minutes"
	                android:text="@string/minutes"
	                android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="3dp"
			        android:paddingRight="10dp"
			        android:paddingLeft="10dp"/>    
	        </RelativeLayout>
		    <RelativeLayout 
		        android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal">
		        <TextView
			        android:id="@+id/seconds" 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="5dp"
			        android:layout_marginRight="5dp"
			        android:layout_marginLeft="5dp"
			        android:gravity="center_horizontal"
			        android:layout_centerHorizontal="true"
			        android:textSize="23sp"/>
		        <TextView 
	                android:id="@+id/seconds_title"
	                android:text="@string/seconds"
	                android:layout_below="@+id/seconds"
	                android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="3dp"
			        android:paddingRight="10dp"
			        android:paddingLeft="10dp"/>
		    </RelativeLayout>
	    </LinearLayout>
	    <Button 
		    android:id="@+id/startButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/startButton"
		    android:layout_below="@+id/remaining_time"
		    android:layout_centerHorizontal="true"
		    android:background="#faa648"
		    android:textColor="#FFF"
		    android:padding="10dp"
		    android:layout_margin="10dp"
		    android:textSize="15sp"
		    android:visibility="gone"/>
	</RelativeLayout>
</RelativeLayout>

